[package]
name = "bn-demo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/trading.rs"
crate-type = ["cdylib"]

[dependencies]
blocknative-flows = "0.1.1"
slack-flows = "0.2.3"

ethers-core = "1.0.2"
ethers-signers = "1.0.2"

once_cell = "1.16.0"
http_req_wasi = "0.10.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
